[package]
name = "dub-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
http = "1.0"

[dev-dependencies]
tokio = { workspace = true }
wiremock = "0.6"
